core/tests/snapshots/errors__record_type_check.snap
---
source: core/tests/errors.rs
expression: "run_error(concat! (\"tests/errors/\", stringify! (record_type_check), \".rain\"))"
---
<hidden>:10:10
| }
| 
| let foo: Record(String) = {
           ^^^^^^^^^^^^^^ unrecoverable error: type mismatch, expected [] actual Record
